# git-patch

./: Makefile.am  README.md  configure.ac  git-patch-completion  git-patch.1.txt  git-patch.sh
debian/: changelog  control  docs  git-patch.bash-completion  rules
